--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <head>
     <h1>Blog of Xiaoqi Li</h1>
   </head>
-  
+  <link rel="stylesheet" href="style.css">
+
 <body>
   <i>Never stop learning, because life never stops teaching</i>
   <br>
