added changes in index and css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <style>
     table, th, td {
-      border:1px solid black;
+      border:1px solid rgba(165, 16, 93, 0.653);
+      
     }
+    
     </style>
   <head>
     <h1>Blog of Xiaoqi Li</h1>
@@ -11,11 +13,11 @@
   <link rel="stylesheet" href="style.css">
 
 <body>
-  <i>Never stop learning, because life never stops teaching</i>
+  <h2>Never stop learning, because life never stops teaching.</h2>
   <br>
   <br>
-  <img src="Xiaoqi.jpg" width="180" height="200">
-  <h2>Always stay positive!</h2>
+  <img src="Xiaoqi.jpg" width="250" height="300">
+  <h3>Always stay positive</h3>
 
   <table style="width:300px">
     <tr>
@@ -43,6 +45,8 @@
       <td><input type="checkbox" />Yes <input type="checkbox" />No</td>
     </tr>
   </table>
+  <br>
+  <br>
   <h3>Hobbies</h3>
 
   <ul>
@@ -55,15 +59,19 @@
     <dd>- Da Vinci Code</dd>
     <li>Hiking</li>
   </ul>
+  <br>
+  <br>
   <h3>Your can always count on me when</h3>
   <ul>
-    <li>You want to learn how to cook Chinese</li>
+    <li>You want to learn how to cook Chinese food</li>
     <li>You want to learn how to speak Chinese</li>
   </ul>
-  <h3>A funny story about me</h3>
-  <p>  Tell a short funny story about your life.  </p>
+  <br>
+  <br>
+  <h3>A Funny Story About Me</h3>
+  <p> My curious doughter asked me: “Mommy, why are some of your hairs turning grey?” I tried to use this occasion to teach her:"It is because of you, dear. Every bad action of yours will turn one of my hairs grey!" The child replied innocently: “Now I know why grandmother has only grey hairs on her head.”  </p>
   <h4>TL;DR</h4>
-  <p>  Summarise your funny story in one short sentence.  </p>
+  <p> Because of me, my mother has grey hair.  </p>
   <a href="#" class="previous">&laquo; Previous</a>
   <a href="index.html">Xiaoqi</a>
   <a href="#" class="next">Next &raquo;</a>
