added links in index

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
   <p> My curious doughter asked me: “Mommy, why are some of your hairs turning grey?” I tried to use this occasion to teach her:"It is because of you, dear. Every bad action of yours will turn one of my hairs grey!" The child replied innocently: “Now I know why grandmother has only grey hairs on her head.”  </p>
   <h4>TL;DR</h4>
   <p> Because of me, my mother has grey hair.  </p>
-  <a href="#" class="previous">&laquo; Previous</a>
+  <a href="https://lakneswaran.github.io/html-introduction/" class="previous">&laquo; Previous</a>
   <a href="index.html">Xiaoqi</a>
-  <a href="#" class="next">Next &raquo;</a>
+  <a href="https://barbaracristinanunes.github.io/html-introduction/" class="next">Next &raquo;</a>
 
 </body>
 </html>
