added changes in index

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </ul>
   <br>
   <br>
-  <h3>Your can always count on me when</h3>
+  <h3>You can always count on me when</h3>
   <ul>
     <li>You want to learn how to cook Chinese food</li>
     <li>You want to learn how to speak Chinese</li>
